--- a/src/main/java/ninefoo/lang/en/ValidationFormLang.json
+++ b/src/main/java/ninefoo/lang/en/ValidationFormLang.json
@@ -5,11 +5,13 @@
 		"REQUIRED" : "%s is required.",
 		"WRONG_FORMAT" : "%s is not valid.",
 		"WRONG_USERNAME_PASSWORD" : "Wrong username or password.",
+		"WRONG_DATE_BEFORE_DATE" : "%s should be before %s",
+		"WRONG_DATE_AFTER_DATE" : "%s should be after %s",
 		"MIN_LENGTH" : "%s must be at least %d.",
 		"MAX_LENGTH" : "%s must be at most %d.",
 		"REGISTRATION_SUCCESS" : "Registration successful! Please login.",
 		"UNIQUE" : "%s must be unique",
-		
+
 		"OPERATION_FAILED" : "Operation failed",
 		"OPERATION_SUCCESSFUL" : "Operation successful",
 		"ERROR_OCCURED" : "An error occured",
