--- a/src/main/java/ninefoo/lang/en/ValidationFormLang.json
+++ b/src/main/java/ninefoo/lang/en/ValidationFormLang.json
@@ -5,8 +5,8 @@
 		"REQUIRED" : "%s is required.",
 		"WRONG_FORMAT" : "%s is not valid.",
 		"WRONG_USERNAME_PASSWORD" : "Wrong username or password.",
-		"WRONG_DATE_BEFORE_DATE" : "%s should be before %s",
-		"WRONG_DATE_AFTER_DATE" : "%s should be after %s",
+		"WRONG_DATE_BEFORE_DATE" : "%s should be at most %s",
+		"WRONG_DATE_AFTER_DATE" : "%s should be at least %s",
 		"MIN_LENGTH" : "%s must be at least %d.",
 		"MAX_LENGTH" : "%s must be at most %d.",
 		"REGISTRATION_SUCCESS" : "Registration successful! Please login.",
@@ -16,6 +16,9 @@
 		"OPERATION_SUCCESSFUL" : "Operation successful",
 		"ERROR_OCCURED" : "An error occured",
 		
-		"PROJECT_CREATED" : "Project created successfully!"
+		"UPDATED" : "%s updated successfully!",
+		"DELETED" : "%s deleted successfully!",
+		"LOADED" : "%s loaded successfully!",
+		"CREATED" : "%s created successfully!"
 	}
 }
