--- a/src/main/resources/lang/en/ActivityLang.json
+++ b/src/main/resources/lang/en/ActivityLang.json
@@ -5,6 +5,7 @@
 		"NEW_DEPENDENCY_ACT" : "New dependency",
 		"ACTIVITY_DEPENDS_ACT" : "Activity '%s' depends on",
 		"ASSIGN_MEMBER_ACTIVITY_ACT" : "Assign member to activity",
-		"ACTIVITY" : "Activity"
+		"ACTIVITY_ACT" : "Activity",
+		"ASSIGN_ACT" : "Assign"
 	}
 }
