Completed adding users to project

--- a/src/main/resources/lang/en/ProjectLang.json
+++ b/src/main/resources/lang/en/ProjectLang.json
@@ -2,6 +2,7 @@
 	"name" : "Project language",
 	"description" : "Language related to Project. Include the suffix _PRO for each key",
 	"language" : {
-		"UPDATE_PROJECT" : "Update project"
+		"UPDATE_PROJECT" : "Update project",
+		"ADD_USER_PRO": "Add user to project"
 	}
 }
