--- a/src/main/resources/lang/en/ActivityLang.json
+++ b/src/main/resources/lang/en/ActivityLang.json
@@ -6,6 +6,7 @@
 		"ACTIVITY_DEPENDS_ACT" : "Activity '%s' depends on",
 		"ASSIGN_MEMBER_ACTIVITY_ACT" : "Assign member to activity",
 		"ACTIVITY_ACT" : "Activity",
-		"ASSIGN_ACT" : "Assign"
+		"ASSIGN_ACT" : "Assign",
+		"MY_ASSIGNED_ACTIVITIES_ACT" : "My assigned activities"
 	}
 }
