--- a/src/main/resources/lang/en/ActivityLang.json
+++ b/src/main/resources/lang/en/ActivityLang.json
@@ -7,6 +7,7 @@
 		"ASSIGN_MEMBER_ACTIVITY_ACT" : "Assign member to activity",
 		"ACTIVITY_ACT" : "Activity",
 		"ASSIGN_ACT" : "Assign",
-		"MY_ASSIGNED_ACTIVITIES_ACT" : "My assigned activities"
+		"MY_ASSIGNED_ACTIVITIES_ACT" : "My assigned activities",
+		"CREATE_ACTIVITY_ACT" : "Create activity"
 	}
 }
