in activity controller, completed the empty methods insertActivity and editActivity in the validationRule, added a new rule for maxIntValue, which returns true if an integer does not exceed the max value

--- a/src/main/resources/lang/en/ValidationFormLang.json
+++ b/src/main/resources/lang/en/ValidationFormLang.json
@@ -11,6 +11,7 @@
 		"MAX_LENGTH" : "%s length must be at most %d.",
 		"REGISTRATION_SUCCESS" : "Registration successful! Please login.",
 		"UNIQUE" : "%s must be unique",
+		"MAX_NUM_VALUE": "%s number exceeds maximum value of ___"
 
 		"OPERATION_FAILED" : "Operation failed",
 		"OPERATION_SUCCESSFUL" : "Operation successful",
