--- a/src/main/resources/lang/en/ValidationFormLang.json
+++ b/src/main/resources/lang/en/ValidationFormLang.json
@@ -11,11 +11,11 @@
 		"MAX_LENGTH" : "%s length must be at most %d.",
 		"REGISTRATION_SUCCESS" : "Registration successful! Please login.",
 		"UNIQUE" : "%s must be unique",
-		"MAX_NUM_VALUE": "%s number exceeds maximum value of ___"
+		"MAX_NUM_VALUE": "%s number exceeds maximum value of %d",
 
 		"OPERATION_FAILED" : "Operation failed",
 		"OPERATION_SUCCESSFUL" : "Operation successful",
-		"ERROR_OCCURED" : "An error occured",
+		"ERROR_OCCURED" : "An error occurred",
 		"MISSING_OPEN" : "Please select a %s to open",
 		"MISSING_EDIT" : "Please select a %s to edit",
 		
