Fixed some issues regarding the validationRules,and error messages. And added maxIntValue

--- a/src/main/resources/lang/en/ValidationFormLang.json
+++ b/src/main/resources/lang/en/ValidationFormLang.json
@@ -12,6 +12,7 @@
 		"REGISTRATION_SUCCESS" : "Registration successful! Please login.",
 		"UNIQUE" : "%s must be unique",
 		"MAX_NUM_VALUE": "%s number exceeds maximum value of %d",
+		"MIN_NUM_VALUE": "%s number is smaller than minimum value of %d",
 
 		"OPERATION_FAILED" : "Operation failed",
 		"OPERATION_SUCCESSFUL" : "Operation successful",
