--- a/src/main/resources/lang/en/ActivityLang.json
+++ b/src/main/resources/lang/en/ActivityLang.json
@@ -19,6 +19,7 @@
 		"OPTIMISTIC_ACT"            : "Optimistic",
 		"LIKELY_ACT"                : "Likely",
 		"PESSIMISTIC_ACT"           : "Pessimistic",
+		"COST_ACT"				 : "Cost",
 		"MEMBER_ACT"                : "Member",
 		"PREREQ_ACT"                : "Prereq."
 	}
