--- a/src/main/resources/lang/en/ValidationFormLang.json
+++ b/src/main/resources/lang/en/ValidationFormLang.json
@@ -19,6 +19,10 @@
 		"ERROR_OCCURED" : "An error occurred",
 		"MISSING_OPEN" : "Please select a %s to open",
 		"MISSING_EDIT" : "Please select a %s to edit",
+		"MISSING_DELETE": "Please select a %s to delete",
+
+		"DELETE_CONFIRMATION" : "Delete Confirmation",
+		"DELETE_CONFIRMATION_TEXT" : "Are you sure you would like to delete %s: %s",
 		
 		"UPDATED" : "%s updated successfully!",
 		"DELETED" : "%s deleted successfully!",
