--- a/src/main/resources/lang/en/ProjectLang.json
+++ b/src/main/resources/lang/en/ProjectLang.json
@@ -3,6 +3,7 @@
 	"description" : "Language related to Project. Include the suffix _PRO for each key",
 	"language" : {
 		"UPDATE_PROJECT" 	: "Update project",
+		"CREATE_ADD_PRO"		: "Create and Add",
 		"ADD_USER_PRO"		: "Add user to project",
 		"VIEW_MY_PROJECTS_PRO": "View my projects",
 		"OPEN_PRO"			: "Open",
