--- a/src/main/resources/lang/en/ActivityLang.json
+++ b/src/main/resources/lang/en/ActivityLang.json
@@ -23,6 +23,12 @@
 		"COST_ACT"				 : "Cost",
 		"MEMBER_ACT"                : "Member",
 		"COST_ACT"                  : "Cost",
-		"PREREQ_ACT"                : "Prereq."
+		"PREREQ_ACT"                : "Prereq.",
+		"ADD_DEPENDENCY_ACT"		: "Add dependency",
+		"ADD_ACT"				: "Add",
+		"EDIT_ACT"				: "Edit",
+		"REMOVE_ACT"			: "Remove",
+		"VIEW_DETAILS_ACT"		: "View details",
+		"VIEW_ACTIVITY_DETAILS_ACT": "View activity details"
 	}
 }
