Translated to french and fixed a bug with gantt date

--- a/src/main/resources/lang/fr/InputFormLang.json
+++ b/src/main/resources/lang/fr/InputFormLang.json
@@ -6,20 +6,20 @@
 		"WELCOME" : "Bienvenue",
 		"NEW_ACCOUNT" : "Nouveau compte",
 		
-		"FIRST_NAME" : "Prenom",
+		"FIRST_NAME" : "Prénom",
 		"LAST_NAME" : "Nom de famille",
 		"USERNAME" : "Pseudo",
 		"PASSWORD" : "Mot de passe",
 		
 		"REGISTRATION_LINK" : "<html>Pas de compte ? <font color=\"#000099\"><u>Inscrivez-vous</u></font></html>",
-		"LOGIN_LINK" : "<html>Deja inscrit ? <font color=\"#000099\"><u>Connectez-vous</u></font></html>",
+		"LOGIN_LINK" : "<html>Déja inscrit ? <font color=\"#000099\"><u>Connectez-vous</u></font></html>",
 		
 		"LOGIN" : "Connecter",
 		"REGISTER" : "Enregistrer",
 		
-		"CREATE_NEW_PROJECT" : "Creer un nouveau projet",
-		"CREATE_PROJECT" : "Creer un projet",
-		"DATE_CREATED" : "Date de creation",
+		"CREATE_NEW_PROJECT" : "Créer un nouveau projet",
+		"CREATE_PROJECT" : "Créer un projet",
+		"DATE_CREATED" : "Date de création",
 		"PROJECT" : "Projet",
 		"NAME" : "Nom",
 		"BUDGET" : "Budget",
