--- a/src/main/resources/lang/fr/InputFormLang.json
+++ b/src/main/resources/lang/fr/InputFormLang.json
@@ -14,18 +14,33 @@
 		"REGISTRATION_LINK" : "<html>Pas de compte ? <font color=\"#000099\"><u>Inscrivez-vous</u></font></html>",
 		"LOGIN_LINK" : "<html>Déja inscrit ? <font color=\"#000099\"><u>Connectez-vous</u></font></html>",
 		
-		"LOGIN" : "Connecter",
+		"LOGIN" 	: "Connecter",
+		"LOGOUT"   : "Déconnexion",
 		"REGISTER" : "Enregistrer",
+		"CREATE" 	: "Créer ",
+		"ADD" 	: "Ajouter",
+		"CLOSE" 	: "Fermer",
+
 		
 		"CREATE_NEW_PROJECT" : "Créer un nouveau projet",
 		"CREATE_PROJECT" : "Créer un projet",
 		"DATE_CREATED" : "Date de création",
 		"PROJECT" : "Projet",
+		"USER": "Utilisateur",
+		"MEMBER" : "Membre",
+		"MANAGER" : "Gestionnaire",
+		"ROLE" : "Rôle",
 		"NAME" : "Nom",
 		"BUDGET" : "Budget",
 		"DEADLINE" : "Date limite",
 		"DESCRIPTION" : "Description",
 		
-		"START_DATE" : "Date de commencement"
+		"START_DATE" : "Date de commencement",
+		"NEW_MEMBER" : "Nouveau Membre",
+		"REGISTER_A_NEW_MEMBER" : "Enregistrer un nouveau membre"
+		"VIEW_ASSIGNED" : "Voir Assignés",
+		"VIEW_MY_ASSIGNED_TASKS" : "Voir mes activités assignés"
+
+
 	}
 }
