--- a/src/main/resources/lang/en/ValidationFormLang.json
+++ b/src/main/resources/lang/en/ValidationFormLang.json
@@ -20,6 +20,11 @@
 		"MISSING_OPEN" : "Please select a %s to open",
 		"MISSING_EDIT" : "Please select a %s to edit",
 		"MISSING_DELETE": "Please select a %s to delete",
+		"MISSING_OPEN_ACT" : "Please select an %s to open",
+		"MISSING_EDIT_ACT" : "Please select an %s to edit",
+		"MISSING_DELETE_ACT": "Please select an %s to delete",
+		"MISSING_VIEW_ACT" :	"Please select an %s to view",
+
 
 		"DELETE_CONFIRMATION" : "Delete Confirmation",
 		"DELETE_CONFIRMATION_TEXT" : "Are you sure you would like to delete %s: %s",
