--- a/src/main/resources/lang/fr/ValidationFormLang.json
+++ b/src/main/resources/lang/fr/ValidationFormLang.json
@@ -11,10 +11,25 @@
 		"MAX_LENGTH" : "%s longueur doit etre au plus %d.",
 		"REGISTRATION_SUCCESS" : "Inscription réussie! Connectez vous.",
 		"UNIQUE" : "%s doit etre unique",
+		"MAX_NUM_VALUE": "%s chiffre excède limite de %d",
+		"MIN_NUM_VALUE": "%s chiffre est moins que le minimum %d",
+
 		
 		"OPERATION_FAILED" : "L'opération a échoué",
 		"OPERATION_SUCCESSFUL" : "Opération réussie",
 		"ERROR_OCCURED" : "Une erreur s'est produite",
+		"MISSING_OPEN" : "Selectionner un %s pour ouvrir",
+		"MISSING_EDIT" : "Selectionner un %s pour modifier",
+		"MISSING_DELETE": "Selectionner un %s pour supprimer",
+		"MISSING_OPEN_ACT" : "Selectionner une %s pour ouvrir",
+		"MISSING_EDIT_ACT" : "Selectionner une %s pour modifier",
+		"MISSING_DELETE_ACT": "Selectionner une %s pour supprimer",
+		"MISSING_VIEW_ACT" :	"Selectionner une %s pour visionner",
+
+
+		"DELETE_CONFIRMATION" : "Confirmation Supprimer",
+		"DELETE_CONFIRMATION_TEXT" : "Êtes-vous sûr de vouloir supprimer %s: %s",
+
 		
 		"UPDATED" : "%s mis à jour avec succès!",
 		"DELETED" : "%s supprime avec succès!",
