Load Act. fields on edit

--- a/src/main/resources/lang/en/InputFormLang.json
+++ b/src/main/resources/lang/en/InputFormLang.json
@@ -18,6 +18,7 @@
 		"LOGOUT" : "Logout",
 		"REGISTER" : "Register",
 		"CREATE" : "Create",
+		"UPDATE" : "Update",
 		"ADD" : "Add",
 		"CLOSE" : "Close",
 		
