--- a/src/main/resources/lang/en/InputFormLang.json
+++ b/src/main/resources/lang/en/InputFormLang.json
@@ -14,6 +14,15 @@
 		"REGISTRATION_LINK" : "<html>Don't have an account ? <font color=\"#000099\"><u>Register now</u></font></html>",
 		"LOGIN_LINK" : "<html>Already registered ? <font color=\"#000099\"><u>Login now</u></font></html>",
 		
+		"LANGUAGE" : "Language",
+		"HELP" : "Help",
+		"IMPORT_PROJECT" : "Import project",
+		"EXPORT_PROJECT" : "Export project",
+		"ENGLISH" : "English",
+		"FRENCH" : "French",
+		"ABOUT" : "About",
+		"EXIT" : "Exit",
+
 		"LOGIN" : "Login",
 		"LOGOUT" : "Logout",
 		"REGISTER" : "Register",
@@ -40,6 +49,21 @@
 		"NEW_MEMBER" : "New Member",
 		"REGISTER_A_NEW_MEMBER" : "Register a new member",
 		"VIEW_ASSIGNED" : "View Assigned",
-		"VIEW_MY_ASSIGNED_ACTIVITIES" : "View my assigned activities"
+		"VIEW_MY_ASSIGNED_ACTIVITIES" : "View my assigned activities",
+
+		"JANUARY"		: "January",
+		"FEBRUARY"		: "February",
+		"MARCH"		: "March",
+		"APRIL"		: "April",
+		"MAY"			: "May",
+		"JUNE"		: "June",
+		"JULY"		: "July",
+		"AUGUST"		: "August",
+		"SEPTEMBER"	: "September",
+		"OCTOBER"		: "October",
+		"NOVEMBER"		: "November",
+		"DECEMBER"		: "December",
+
+		"SAMPLE_TEXT" : "e.g. é  A new project has been successfully created"
 	}
 }
