Removed accents and created new files

--- a/src/main/resources/lang/fr/InputFormLang.json.accent.txt
+++ b/src/main/resources/lang/fr/InputFormLang.json.accent.txt
@@ -6,13 +6,13 @@
 		"WELCOME" : "Bienvenue",
 		"NEW_ACCOUNT" : "Nouveau compte",
 		
-		"FIRST_NAME" : "Prenom",
+		"FIRST_NAME" : "Prénom",
 		"LAST_NAME" : "Nom de famille",
 		"USERNAME" : "Pseudo",
 		"PASSWORD" : "Mot de passe",
 		
 		"REGISTRATION_LINK" : "<html>Pas de compte ? <font color=\"#000099\"><u>Inscrivez-vous</u></font></html>",
-		"LOGIN_LINK" : "<html>Deja inscrit ? <font color=\"#000099\"><u>Connectez-vous</u></font></html>",
+		"LOGIN_LINK" : "<html>Déja inscrit ? <font color=\"#000099\"><u>Connectez-vous</u></font></html>",
 		
 		"LANGUAGE" : "Language",
 		"HELP" : "Aide",
@@ -25,21 +25,21 @@
 
 
 		"LOGIN" 	: "Connecter",
-		"LOGOUT"   : "Deconnexion",
+		"LOGOUT"   : "Déconnexion",
 		"REGISTER" : "Enregistrer",
-		"CREATE" 	: "Creer ",
+		"CREATE" 	: "Créer ",
 		"ADD" 	: "Ajouter",
 		"CLOSE" 	: "Fermer",
 
 		
-		"CREATE_NEW_PROJECT" : "Creer un nouveau projet",
-		"CREATE_PROJECT" : "Creer un projet",
-		"DATE_CREATED" : "Date de creation",
+		"CREATE_NEW_PROJECT" : "Créer un nouveau projet",
+		"CREATE_PROJECT" : "Créer un projet",
+		"DATE_CREATED" : "Date de création",
 		"PROJECT" : "Projet",
 		"USER": "Utilisateur",
 		"MEMBER" : "Membre",
 		"MANAGER" : "Gestionnaire",
-		"ROLE" : "Role",
+		"ROLE" : "Rôle",
 		"NAME" : "Nom",
 		"BUDGET" : "Budget",
 		"DEADLINE" : "Date limite",
@@ -48,11 +48,11 @@
 		"START_DATE" : "Date de commencement",
 		"NEW_MEMBER" : "Nouveau Membre",
 		"REGISTER_A_NEW_MEMBER" : "Enregistrer un nouveau membre"
-		"VIEW_ASSIGNED" : "Voir Assignes",
-		"VIEW_MY_ASSIGNED_TASKS" : "Voir mes activites assignes",
+		"VIEW_ASSIGNED" : "Voir Assignés",
+		"VIEW_MY_ASSIGNED_TASKS" : "Voir mes activités assignés",
 
 		"JANUARY"		: "Janvier",
-		"FEBRUARY"		: "Fevrier",
+		"FEBRUARY"		: "Février",
 		"MARCH"		: "Mars",
 		"APRIL"		: "Avril",
 		"MAY"			: "Mai",
@@ -62,9 +62,9 @@
 		"SEPTEMBER"	: "Septembre",
 		"OCTOBER"		: "Octobre",
 		"NOVEMBER"		: "Novembre",
-		"DECEMBER"		: "Decembre",
+		"DECEMBER"		: "Décembre",
 
-		"SAMPLE_TEXT" : "e.g. Un nouveau projet a ete cree avec succes"
+		"SAMPLE_TEXT" : "e.g. Un nouveau projet a été créé avec succès"
 
 	}
 }
