--- a/src/main/resources/lang/fr/ActivityLang.json
+++ b/src/main/resources/lang/fr/ActivityLang.json
@@ -1,36 +1,36 @@
 	{
-	"name" : "Language des activités",
-	"description" : "Language reliée aux activités. Inclure le suffixe _ACT pour chaque mot cle",
+	"name" : "Language des activites",
+	"description" : "Language reliee aux activites. Inclure le suffixe _ACT pour chaque mot cle",
 	"language" : {
 		"NEW_DEPENDENCY_ACT"        : "Nouvelle dependance",
-		"ACTIVITY_DEPENDS_ACT"      : "Activité '%s' dépend sur",
-		"ASSIGN_MEMBER_ACTIVITY_ACT": "Assigner membre aux activités",
-		"ACTIVITY_ACT"              : "Activité",
+		"ACTIVITY_DEPENDS_ACT"      : "Activite '%s' dépend sur",
+		"ASSIGN_MEMBER_ACTIVITY_ACT": "Assigner membre aux activites",
+		"ACTIVITY_ACT"              : "Activite",
 		"ASSIGN_ACT"                : "Assigner",
-		"MY_ASSIGNED_ACTIVITIES_ACT" : "Mes activités assignés",
-		"CREATE_ACTIVITY_ACT" 	: "Créer activité",
-		"UPDATE_ACTIVITY_ACT"		: "Mettre à jour l'activité",
+		"MY_ASSIGNED_ACTIVITIES_ACT" : "Mes activites assignes",
+		"CREATE_ACTIVITY_ACT" 	: "Creer activite",
+		"UPDATE_ACTIVITY_ACT"		: "Mettre a jour l'activite",
 		"ACTIVITY_ID_ACT"           : "Numero d'identification",
 		"ACTIVITY_NAME_ACT"         : "Nom",
 		"ACTIVITY_LABEL_ACT"		 : "Nom",
-		"START_ACT"                 : "Début",
+		"START_ACT"                 : "Debut",
 		"FINISH_ACT"                : "Fin",
-		"DURATION_ACT"              : "Durée",
-		"PLANNED_PERCENTAGE_ACT"    : "% Planifié",
+		"DURATION_ACT"              : "Duree",
+		"PLANNED_PERCENTAGE_ACT"    : "% Planifie",
 		"OPTIMISTIC_ACT"            : "Optimiste",
 		"LIKELY_ACT"                : "Probable",
 		"PESSIMISTIC_ACT"           : "Pessimiste",
-		"COST_ACT"				 : "Coût",
+		"COST_ACT"				 : "Cout",
 		"MEMBER_ACT"                : "Membre",
 		"PREREQ_ACT"                : "Prereq.",
 		"ADD_DEPENDENCY_ACT"		: "Ajouter dependance",
 		"ADD_ACT"				: "Ajouter",
-		"ADD_A_NEW_ACTIVITY_ACT"	: "Ajouter une nouvelle activité",
+		"ADD_A_NEW_ACTIVITY_ACT"	: "Ajouter une nouvelle activite",
 		"EDIT_ACT"				: "Modifier",
-		"EDIT_THE_ACTIVITY_PROPERTIES_ACT" : "Modifier les propriétés de l'activité",
+		"EDIT_THE_ACTIVITY_PROPERTIES_ACT" : "Modifier les proprietes de l'activite",
 		"REMOVE_ACT"			: "Supprimer",
-		"REMOVE_THE_ACTIVITY_ACT"	: "Supprimer l'activité du projet",
+		"REMOVE_THE_ACTIVITY_ACT"	: "Supprimer l'activite du projet",
 		"VIEW_DETAILS_ACT"		: "Voir details",
-		"VIEW_ACTIVITY_DETAILS_ACT": "Voir les details de l'activité"
+		"VIEW_ACTIVITY_DETAILS_ACT": "Voir les details de l'activite"
 	}
 }
