added german language

--- a/src/main/resources/lang/en/InputFormLang.json
+++ b/src/main/resources/lang/en/InputFormLang.json
@@ -20,6 +20,7 @@
 		"EXPORT_PROJECT" : "Export project",
 		"ENGLISH" : "English",
 		"FRENCH" : "French",
+		"GERMAN" : "German",
 		"ABOUT" : "About",
 		"EXIT" : "Exit",
 
