--- a/src/main/resources/lang/fr/InputFormLang.json
+++ b/src/main/resources/lang/fr/InputFormLang.json
@@ -20,6 +20,7 @@
 		"EXPORT_PROJECT" : "Exporter projet",
 		"ENGLISH" : "Anglais",
 		"FRENCH" : "Français",
+		"GERMAN" : "Allemand",
 		"ABOUT" : "Propos",
 		"EXIT" : "Quitter",
 
