reformat json files

--- a/src/main/resources/lang/fr/ActivityLang.json
+++ b/src/main/resources/lang/fr/ActivityLang.json
@@ -1,36 +1,36 @@
-	{
-	"name" : "Language des activites",
-	"description" : "Language reliee aux activites. Inclure le suffixe _ACT pour chaque mot cle",
-	"language" : {
-		"NEW_DEPENDENCY_ACT"        : "Nouvelle dependance",
-		"ACTIVITY_DEPENDS_ACT"      : "Activite '%s' dépend sur",
-		"ASSIGN_MEMBER_ACTIVITY_ACT": "Assigner membre aux activites",
-		"ACTIVITY_ACT"              : "Activite",
-		"ASSIGN_ACT"                : "Assigner",
-		"MY_ASSIGNED_ACTIVITIES_ACT" : "Mes activites assignes",
-		"CREATE_ACTIVITY_ACT" 	: "Creer activite",
-		"UPDATE_ACTIVITY_ACT"		: "Mettre a jour l'activite",
-		"ACTIVITY_ID_ACT"           : "Numero d'identification",
-		"ACTIVITY_NAME_ACT"         : "Nom",
-		"ACTIVITY_LABEL_ACT"		 : "Nom",
-		"START_ACT"                 : "Debut",
-		"FINISH_ACT"                : "Fin",
-		"DURATION_ACT"              : "Duree",
-		"PLANNED_PERCENTAGE_ACT"    : "% Planifie",
-		"OPTIMISTIC_ACT"            : "Optimiste",
-		"LIKELY_ACT"                : "Probable",
-		"PESSIMISTIC_ACT"           : "Pessimiste",
-		"COST_ACT"				 : "Cout",
-		"MEMBER_ACT"                : "Membre",
-		"PREREQ_ACT"                : "Prereq.",
-		"ADD_DEPENDENCY_ACT"		: "Ajouter dependance",
-		"ADD_ACT"				: "Ajouter",
-		"ADD_A_NEW_ACTIVITY_ACT"	: "Ajouter une nouvelle activite",
-		"EDIT_ACT"				: "Modifier",
-		"EDIT_THE_ACTIVITY_PROPERTIES_ACT" : "Modifier les proprietes de l'activite",
-		"REMOVE_ACT"			: "Supprimer",
-		"REMOVE_THE_ACTIVITY_ACT"	: "Supprimer l'activite du projet",
-		"VIEW_DETAILS_ACT"		: "Voir details",
-		"VIEW_ACTIVITY_DETAILS_ACT": "Voir les details de l'activite"
-	}
+{
+  "name": "Language des activites",
+  "description": "Language reliee aux activites. Inclure le suffixe _ACT pour chaque mot cle",
+  "language": {
+    "NEW_DEPENDENCY_ACT": "Nouvelle dependance",
+    "ACTIVITY_DEPENDS_ACT": "Activite '%s' dï¿½pend sur",
+    "ASSIGN_MEMBER_ACTIVITY_ACT": "Assigner membre aux activites",
+    "ACTIVITY_ACT": "Activite",
+    "ASSIGN_ACT": "Assigner",
+    "MY_ASSIGNED_ACTIVITIES_ACT": "Mes activites assignes",
+    "CREATE_ACTIVITY_ACT": "Creer activite",
+    "UPDATE_ACTIVITY_ACT": "Mettre a jour l'activite",
+    "ACTIVITY_ID_ACT": "Numero d'identification",
+    "ACTIVITY_NAME_ACT": "Nom",
+    "ACTIVITY_LABEL_ACT": "Nom",
+    "START_ACT": "Debut",
+    "FINISH_ACT": "Fin",
+    "DURATION_ACT": "Duree",
+    "PLANNED_PERCENTAGE_ACT": "% Planifie",
+    "OPTIMISTIC_ACT": "Optimiste",
+    "LIKELY_ACT": "Probable",
+    "PESSIMISTIC_ACT": "Pessimiste",
+    "COST_ACT": "Cout",
+    "MEMBER_ACT": "Membre",
+    "PREREQ_ACT": "Prereq.",
+    "ADD_DEPENDENCY_ACT": "Ajouter dependance",
+    "ADD_ACT": "Ajouter",
+    "ADD_A_NEW_ACTIVITY_ACT": "Ajouter une nouvelle activite",
+    "EDIT_ACT": "Modifier",
+    "EDIT_THE_ACTIVITY_PROPERTIES_ACT": "Modifier les proprietes de l'activite",
+    "REMOVE_ACT": "Supprimer",
+    "REMOVE_THE_ACTIVITY_ACT": "Supprimer l'activite du projet",
+    "VIEW_DETAILS_ACT": "Voir details",
+    "VIEW_ACTIVITY_DETAILS_ACT": "Voir les details de l'activite"
+  }
 }
