--- a/src/main/resources/lang/fr/InputFormLang.json
+++ b/src/main/resources/lang/fr/InputFormLang.json
@@ -1,71 +1,59 @@
 {
-	"name" : "Input form",
-	"description" : "Language for input form/dialog. E.g Firt name, Last name etc...",
-	"language" : {
-	
-		"WELCOME" : "Bienvenue",
-		"NEW_ACCOUNT" : "Nouveau compte",
-		
-		"FIRST_NAME" : "Prenom",
-		"LAST_NAME" : "Nom de famille",
-		"USERNAME" : "Pseudo",
-		"PASSWORD" : "Mot de passe",
-		
-		"REGISTRATION_LINK" : "<html>Pas de compte ? <font color=\"#000099\"><u>Inscrivez-vous</u></font></html>",
-		"LOGIN_LINK" : "<html>Deja inscrit ? <font color=\"#000099\"><u>Connectez-vous</u></font></html>",
-		
-		"LANGUAGE" : "Language",
-		"HELP" : "Aide",
-		"IMPORT_PROJECT" : "Importer projet",
-		"EXPORT_PROJECT" : "Exporter projet",
-		"ENGLISH" : "Anglais",
-		"FRENCH" : "Français",
-		"GERMAN" : "Allemand",
-		"ABOUT" : "Propos",
-		"EXIT" : "Quitter",
-
-
-		"LOGIN" 	: "Connecter",
-		"LOGOUT"   : "Deconnexion",
-		"REGISTER" : "Enregistrer",
-		"CREATE" 	: "Creer ",
-		"ADD" 	: "Ajouter",
-		"CLOSE" 	: "Fermer",
-
-		
-		"CREATE_NEW_PROJECT" : "Creer un nouveau projet",
-		"CREATE_PROJECT" : "Creer un projet",
-		"DATE_CREATED" : "Date de creation",
-		"PROJECT" : "Projet",
-		"USER": "Utilisateur",
-		"MEMBER" : "Membre",
-		"MANAGER" : "Gestionnaire",
-		"ROLE" : "Role",
-		"NAME" : "Nom",
-		"BUDGET" : "Budget",
-		"DEADLINE" : "Date limite",
-		"DESCRIPTION" : "Description",
-		
-		"START_DATE" : "Date de commencement",
-		"NEW_MEMBER" : "Nouveau Membre",
-		"REGISTER_A_NEW_MEMBER" : "Enregistrer un nouveau membre"
-		"VIEW_ASSIGNED" : "Voir Assignes",
-		"VIEW_MY_ASSIGNED_TASKS" : "Voir mes activites assignes",
-
-		"JANUARY"		: "Janvier",
-		"FEBRUARY"		: "Fevrier",
-		"MARCH"		: "Mars",
-		"APRIL"		: "Avril",
-		"MAY"			: "Mai",
-		"JUNE"		: "Juin",
-		"JULY"		: "Juillet",
-		"AUGUST"		: "Aout",
-		"SEPTEMBER"	: "Septembre",
-		"OCTOBER"		: "Octobre",
-		"NOVEMBER"		: "Novembre",
-		"DECEMBER"		: "Decembre",
-
-		"SAMPLE_TEXT" : "e.g. Un nouveau projet a ete cree avec succes"
-
-	}
+  "name": "Input form",
+  "description": "Language for input form/dialog. E.g Firt name, Last name etc...",
+  "language": {
+    "WELCOME": "Bienvenue",
+    "NEW_ACCOUNT": "Nouveau compte",
+    "FIRST_NAME": "Prenom",
+    "LAST_NAME": "Nom de famille",
+    "USERNAME": "Pseudo",
+    "PASSWORD": "Mot de passe",
+    "REGISTRATION_LINK": "<html>Pas de compte ? <font color=\"#000099\"><u>Inscrivez-vous</u></font></html>",
+    "LOGIN_LINK": "<html>Deja inscrit ? <font color=\"#000099\"><u>Connectez-vous</u></font></html>",
+    "LANGUAGE": "Language",
+    "HELP": "Aide",
+    "IMPORT_PROJECT": "Importer projet",
+    "EXPORT_PROJECT": "Exporter projet",
+    "ENGLISH": "Anglais",
+    "FRENCH": "Franï¿½ais",
+    "GERMAN": "Allemand",
+    "ABOUT": "Propos",
+    "EXIT": "Quitter",
+    "LOGIN": "Connecter",
+    "LOGOUT": "Deconnexion",
+    "REGISTER": "Enregistrer",
+    "CREATE": "Creer ",
+    "ADD": "Ajouter",
+    "CLOSE": "Fermer",
+    "CREATE_NEW_PROJECT": "Creer un nouveau projet",
+    "CREATE_PROJECT": "Creer un projet",
+    "DATE_CREATED": "Date de creation",
+    "PROJECT": "Projet",
+    "USER": "Utilisateur",
+    "MEMBER": "Membre",
+    "MANAGER": "Gestionnaire",
+    "ROLE": "Role",
+    "NAME": "Nom",
+    "BUDGET": "Budget",
+    "DEADLINE": "Date limite",
+    "DESCRIPTION": "Description",
+    "START_DATE": "Date de commencement",
+    "NEW_MEMBER": "Nouveau Membre",
+    "REGISTER_A_NEW_MEMBER": "Enregistrer un nouveau membre"
+    "VIEW_ASSIGNED": "Voir Assignes",
+    "VIEW_MY_ASSIGNED_TASKS": "Voir mes activites assignes",
+    "JANUARY": "Janvier",
+    "FEBRUARY": "Fevrier",
+    "MARCH": "Mars",
+    "APRIL": "Avril",
+    "MAY": "Mai",
+    "JUNE": "Juin",
+    "JULY": "Juillet",
+    "AUGUST": "Aout",
+    "SEPTEMBER": "Septembre",
+    "OCTOBER": "Octobre",
+    "NOVEMBER": "Novembre",
+    "DECEMBER": "Decembre",
+    "SAMPLE_TEXT": "e.g. Un nouveau projet a ete cree avec succes"
+  }
 }
