change some german words that were not properly translated

--- a/src/main/resources/lang/de/ActivityLang.json
+++ b/src/main/resources/lang/de/ActivityLang.json
@@ -5,32 +5,32 @@
     "NEW_DEPENDENCY_ACT": "New Abhängigkeit",
     "ACTIVITY_DEPENDS_ACT": "Aktivität '%s' hängt",
     "ASSIGN_MEMBER_ACTIVITY_ACT": "Ordnen Sie Mitglied, um die Aktivität"
-    "ACTIVITY_ACT": "Activity",
-    "ASSIGN_ACT": "Assign",
+    "ACTIVITY_ACT": "Aktivität",
+    "ASSIGN_ACT": "Zuweisen",
     "MY_ASSIGNED_ACTIVITIES_ACT": "Meine Tätigkeit zugeordnet",
     "CREATE_ACTIVITY_ACT": "Erstellen Aktivität",
     "UPDATE_ACTIVITY_ACT": "Update-Aktivität",
-    "ACTIVITY_ID_ACT": "Activity ID",
-    "ACTIVITY_NAME_ACT": "Activity Name"
-    "ACTIVITY_LABEL_ACT": "Activity-Label",
-    "START_ACT": "Start",
+    "ACTIVITY_ID_ACT": "Aktivität ID",
+    "ACTIVITY_NAME_ACT": "Aktivität Name"
+    "ACTIVITY_LABEL_ACT": "Aktivität Etikette",
+    "START_ACT": "Anfang",
     "FINISH_ACT": "Fertigstellen",
     "DURATION_ACT": "Dauer",
     "PLANNED_PERCENTAGE_ACT": "Plans. %",
-    "OPTIMISTIC_ACT": "optimistisch",
-    "LIKELY_ACT": "wahrscheinlich",
-    "PESSIMISTIC_ACT": "pessimistisch",
-    "COST_ACT": "Cost",
+    "OPTIMISTIC_ACT": "Optimistisch",
+    "LIKELY_ACT": "Wahrscheinlich",
+    "PESSIMISTIC_ACT": "Pessimistisch",
+    "COST_ACT": "Kosten",
     "MEMBER_ACT": "Mitglied",
-    "PREREQ_ACT": "Prereq.",
+    "PREREQ_ACT": "Voraussetzungen",
     "ADD_DEPENDENCY_ACT": "Abhängigkeit hinzufügen",
     "ADD_ACT": "Hinzufügen"
     "ADD_A_NEW_ACTIVITY_ACT": "Hinzufügen einer neuen Tätigkeit",
-    "EDIT_ACT": "Edit",
+    "EDIT_ACT": "Bearbeiten",
     "EDIT_THE_ACTIVITY_PROPERTIES_ACT": "Bearbeiten Sie die Aktivitätseigenschaften",
     "REMOVE_ACT": "Entfernen",
     "REMOVE_THE_ACTIVITY_ACT": "Entfernen Sie die Aktivität aus dem Projekt",
-    "VIEW_DETAILS_ACT": "Details anzeigen",
+    "VIEW_DETAILS_ACT": "Einzelheiten anzeigen",
     "VIEW_ACTIVITY_DETAILS_ACT": "Aktivitätsdetailansicht"
   }
 }
