fixed some words in the german language

--- a/src/main/resources/lang/de/ActivityLang.json
+++ b/src/main/resources/lang/de/ActivityLang.json
@@ -31,6 +31,6 @@
     "REMOVE_ACT": "Entfernen",
     "REMOVE_THE_ACTIVITY_ACT": "Entfernen Sie die Aktivität aus dem Projekt",
     "VIEW_DETAILS_ACT": "Einzelheiten anzeigen",
-    "VIEW_ACTIVITY_DETAILS_ACT": "Aktivitätsdetailansicht"
+    "VIEW_ACTIVITY_DETAILS_ACT": "Ansicht Detail Tätigkeit"
   }
 }
