--- a/src/main/resources/lang/de/InputFormLang.json
+++ b/src/main/resources/lang/de/InputFormLang.json
@@ -2,13 +2,12 @@
   "name": "Eingabeformular",
   "description": "Sprache für Eingabeformular / Dialog zB Vorname, Nachname usw. ....",
   "language": {
-    "WELCOME": "Welcome",
-    "NEW_ACCOUNT": "New Account",
+    "WELCOME": "Willkommen",
+    "NEW_ACCOUNT": "Neues konto",
     "FIRST_NAME": "Vorname",
     "LAST_NAME": "Nachname",
-    "Username": "Username",
-    "PASSWORT": "Passwort",
-
+    "USERNAME": "Username",
+    "PASSWORD": "Passwort",
     "REGISTRATION_LINK": "<html> Sie haben noch kein Konto ? <font color=\"#000099\"><u>Jetzt registrieren</u></font></html>",
     "LOGIN_LINK": "<html>Bereits registriert ? <font color=\"#000099\"><u>Jetzt einloggen</u></font></html>",
     "LANGUAGE": "Sprache",
@@ -18,7 +17,7 @@
     "ENGLISH": "Englisch",
     "FRENCH": "Französisch",
     "GERMAN": "Deutsch",
-    "Info": "About",
+    "ABOUT": "Über",
     "EXIT": "Ausgang",
     "LOGIN": "Einloggen",
     "LOGOUT": "Abmelden",
@@ -30,7 +29,7 @@
     "CREATE_NEW_PROJECT": "Neues Projekt",
     "CREATE_PROJECT": "Projekt erstellen",
     "DATE_CREATED": "Erstellungsdatum",
-    "Projekt": "Projekt",
+    "PROJECT": "Projekt",
     "USER": "User",
     "MEMBER": "Mitglied",
     "MANAGER": "Manager",
@@ -39,7 +38,6 @@
     "BUDGET": "Haushalt",
     "DEADLINE": "Stichtag",
     "DESCRIPTION": "Beschreibung",
-
     "START_DATE": "Startdatum",
     "NEW_MEMBER": "Neues Mitglied",
     "REGISTER_A_NEW_MEMBER": "Jetzt ein neues Mitglied",
