--- a/src/main/resources/lang/fr/InputFormLang.json
+++ b/src/main/resources/lang/fr/InputFormLang.json
@@ -39,7 +39,7 @@
     "DESCRIPTION": "Description",
     "START_DATE": "Date de commencement",
     "NEW_MEMBER": "Nouveau Membre",
-    "REGISTER_A_NEW_MEMBER": "Enregistrer un nouveau membre"
+    "REGISTER_A_NEW_MEMBER": "Enregistrer un nouveau membre",
     "VIEW_ASSIGNED": "Voir Assignes",
     "VIEW_MY_ASSIGNED_TASKS": "Voir mes activites assignes",
     "JANUARY": "Janvier",
