--- a/src/main/resources/lang/fr/ProjectLang.json
+++ b/src/main/resources/lang/fr/ProjectLang.json
@@ -8,7 +8,7 @@
     "VIEW_MY_PROJECTS_PRO": "Voir mes projets",
     "OPEN_PRO": "Ouvrir",
     "EDIT_PRO": "Modifier",
-    "DELETE_PRO": "Supprimer"
+    "DELETE_PRO": "Supprimer",
     "NEW_PROJECT_PRO": "Nouveau Projet",
     "CREATE_A_NEW_PROJECT_PRO": "Creer un nouveau projet",
     "VIEW_PROJECTS_PRO": "Voir Projets",
