--- a/src/main/resources/lang/fr/InputFormLang.json
+++ b/src/main/resources/lang/fr/InputFormLang.json
@@ -55,6 +55,7 @@
     "OCTOBER": "Octobre",
     "NOVEMBER": "Novembre",
     "DECEMBER": "Decembre",
-    "SAMPLE_TEXT": "e.g. Un nouveau projet a ete cree avec succes"
+    "SAMPLE_TEXT": "e.g. Un nouveau projet a ete cree avec succes",
+    "PERT_CHART": "Pert chart"
   }
 }
