--- a/src/main/resources/lang/de/InputFormLang.json
+++ b/src/main/resources/lang/de/InputFormLang.json
@@ -56,6 +56,8 @@
     "NOVEMBER": "November",
     "DECEMBER": "Dezember",
     "SAMPLE_TEXT": "e.g. ein neues Projekt erfolgreich erstellt wurde",
-    "PERT_CHART": "Pert chart"
+    "PERT_CHART": "Pert chart",
+    "ACTIVITY_CHART": "Activity on node"
+
   }
 }
